--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
+# IDEs
+.vscode/
 .idea/
+
+# Intermediate Coverage file
+.coverage
+
+# Output files
+*.png
+
+# Python runtime
+*.pyc
+*.egg-info
+.pytest_cache
+
+# Virtual environments
+venv/
+.venv/.idea/
 
 __pycache__/
